--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Posta Uruguaya</title>
+    <title>Menú - Posta Uruguaya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,10 +32,10 @@
                         <a class="nav-link" href="about.html">Acerca de</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="menu.html">Menú</a>
+                        <a class="nav-link active" aria-current="page" href="menu.html">Menú</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="contactus.html">Contacto</a>
+                        <a class="nav-link" href="contactus.html">Contacto</a>
                     </li>
                 </ul>
                 <a href="#" class="btn btn-primary ms-lg-3" data-bs-toggle="modal" data-bs-target="#reservaModal">Reservar Mesa</a>
@@ -46,83 +46,68 @@
     <!-- Page Header -->
     <header class="page-header text-center text-white py-5">
         <div class="container">
-            <h1 class="display-4 fw-bold">Contacto y Reservas</h1>
-            <p class="lead">Estamos listos para recibirte. Haz tu reserva o envíanos tus dudas.</p>
+            <h1 class="display-4 fw-bold">Nuestro Menú</h1>
+            <p class="lead">Platos que cuentan historias, sabores que crean recuerdos.</p>
         </div>
     </header>
 
-    <!-- Main Content (Grid de Contacto) -->
+    <!-- Main Content (Grid de Productos) -->
     <main class="container my-5">
-        <div class="row g-5">
+        <h2 class="text-center mb-4">Especialidades de la Casa</h2>
+        
+        <!-- Grid de Bootstrap para tarjetas -->
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             
-            <!-- Formulario de Contacto -->
-            <div class="col-lg-7">
-                <h2 class="mb-4">Envíanos un Mensaje</h2>
-                <form action="#" method="POST">
-                    <div class="mb-3">
-                        <label for="nombre" class="form-label">Nombre Completo</label>
-                        <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required>
+            <!-- Tarjeta 1 (con Modal) -->
+            <div class="col">
+                <div class="card h-100 shadow-sm product-card">
+                    <img src="https://placehold.co/600x400/8c1c1c/ffffff?text=Parrillada+Completa" class="card-img-top" alt="Parrillada Uruguaya"
+                         onerror="this.src='https://placehold.co/600x400/cccccc/ffffff?text=Error+cargando+imagen'">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Parrillada Uruguaya</h5>
+                        <p class="card-text">Una selección de nuestros mejores cortes y achuras, perfecta para compartir (2-3 personas).</p>
+                        <a href="#" class="btn btn-primary mt-auto" data-bs-toggle="modal" data-bs-target="#modalParrillada">Más Información</a>
                     </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Correo Electrónico</label>
-                        <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="asunto" class="form-label">Asunto</label>
-                        <input type="text" class="form-control" id="asunto" placeholder="Ej: Reserva para grupo, Evento" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="mensaje" class="form-label">Mensaje</label>
-                        <textarea class="form-control" id="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..." required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-lg">Enviar Mensaje</button>
-                </form>
+                </div>
             </div>
 
-            <!-- Información de Contacto (con Íconos) -->
-            <div class="col-lg-5">
-                <h2 class="mb-4">Información</h2>
-                <div class="p-4 rounded shadow-sm bg-light">
-                    <ul class="list-unstyled fs-5">
-                        <li class="mb-3 d-flex">
-                            <i class="bi bi-geo-alt-fill text-primary fs-3 me-3"></i>
-                            <div>
-                                <strong>Dirección:</strong><br>
-                                Av. Siempre Viva 123, Col. Centro, León, Gto.
-                            </div>
-                        </li>
-                        <li class="mb-3 d-flex">
-                            <i class="bi bi-telephone-fill text-primary fs-3 me-3"></i>
-                            <div>
-                                <strong>Teléfono:</strong><br>
-                                +52 477 123 4567
-                            </div>
-                        </li>
-                        <li class="mb-3 d-flex">
-                            <i class="bi bi-envelope-fill text-primary fs-3 me-3"></i>
-                            <div>
-                                <strong>Email:</strong><br>
-                                reservas@postauruguaya.com
-                            </div>
-                        </li>
-                        <li class="d-flex">
-                            <i class="bi bi-clock-fill text-primary fs-3 me-3"></i>
-                            <div>
-                                <strong>Horarios:</strong><br>
-                                Mar - Dom: 1:00 PM - 11:00 PM<br>
-                                Lunes: Cerrado
-                            </div>
-                        </li>
-                    </ul>
+            <!-- Tarjeta 2 -->
+            <div class="col">
+                <div class="card h-100 shadow-sm product-card">
+                    <img src="https://placehold.co/600x400/553a2a/ffffff?text=Chivito+Uruguayo" class="card-img-top" alt="Chivito"
+                         onerror="this.src='https://placehold.co/600x400/cccccc/ffffff?text=Error+cargando+imagen'">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Chivito al Plato</h5>
+                        <p class="card-text">El clásico sándwich uruguayo en su versión más contundente: lomo, jamón, queso, huevo y más.</p>
+                        <a href="#" class="btn btn-primary mt-auto disabled" aria-disabled="true">Próximamente</a>
+                    </div>
                 </div>
+            </div>
 
-                <!-- Mapa (Requerimiento) -->
-                <h4 class="mt-4">Ubicación</h4>
-                <!-- Usamos un placeholder estático como se pide. Se puede cambiar por un iframe de Google Maps -->
-                <img src="https://placehold.co/600x300/e9ecef/333333?text=Mapa+de+Ubicaci%C3%B3n" 
-                     class="img-fluid rounded shadow-sm" 
-                     alt="Mapa de ubicación"
-                     onerror="this.src='https://placehold.co/600x300/cccccc/ffffff?text=Error+cargando+mapa'">
+            <!-- Tarjeta 3 -->
+            <div class="col">
+                <div class="card h-100 shadow-sm product-card">
+                    <img src="https://placehold.co/600x400/b3a394/ffffff?text=Provoleta+Parrillera" class="card-img-top" alt="Provoleta"
+                         onerror="this.src='https://placehold.co/600x400/cccccc/ffffff?text=Error+cargando+imagen'">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Provoleta Parrillera</h5>
+                        <p class="card-text">Queso provolone fundido a la parrilla con un toque de orégano y aceite de oliva. La entrada ideal.</p>
+                        <a href="#" class="btn btn-primary mt-auto disabled" aria-disabled="true">Próximamente</a>
+                    </div>
+                </div>
+            </div>
+
+             <!-- Tarjeta 4 (Opcional) -->
+             <div class="col">
+                <div class="card h-100 shadow-sm product-card">
+                    <img src="https://placehold.co/600x400/7a5c49/ffffff?text=Asado+de+Tira" class="card-img-top" alt="Asado de Tira"
+                         onerror="this.src='https://placehold.co/600x400/cccccc/ffffff?text=Error+cargando+imagen'">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Asado de Tira</h5>
+                        <p class="card-text">Un corte clásico, cocido lentamente para lograr una ternura y sabor inigualables.</p>
+                        <a href="#" class="btn btn-primary mt-auto disabled" aria-disabled="true">Próximamente</a>
+                    </div>
+                </div>
             </div>
 
         </div>
@@ -148,8 +133,8 @@
                 <div class="col-md-4 mb-3">
                     <h5>Contacto</h5>
                     <ul class="list-unstyled text-white-50">
-                        <li><i class="bi bi-geo-alt-fill me-2"></i>Av. Siempre Viva 123, León</li>
-                        <li><i class="bi bi-telephone-fill me-2"></i>+52 477 123 4567</li>
+                        <li><i class="bi bi-geo-alt-fill me-2"></i>Av. Padrera 123, León</li>
+                        <li><i class="bi bi-telephone-fill me-2"></i>+52 477 233 7271</li>
                         <li><i class="bi bi-envelope-fill me-2"></i>reservas@postauruguaya.com</li>
                     </ul>
                     <div class="fs-4">
@@ -160,7 +145,7 @@
                 </div>
             </div>
             <hr class="text-white-50">
-            <p class="text-center text-white-50 mb-0">&copy; 2024 Posta Uruguaya. Todos los derechos reservados.</p>
+            <p class="text-center text-white-50 mb-0">&copy; 2025 Posta Uruguaya. Todos los derechos reservados.</p>
         </div>
     </footer>
 
@@ -197,6 +182,42 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                     <button type="button" class="btn btn-primary">Enviar Solicitud</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Detalle Producto (Requerimiento) -->
+    <div class="modal fade" id="modalParrillada" tabindex="-1" aria-labelledby="modalParrilladaLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalParrilladaLabel">Parrillada Uruguaya</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="https://placehold.co/600x400/8c1c1c/ffffff?text=Parrillada+en+Detalle" class="img-fluid rounded mb-3" alt="Detalle Parrillada"
+                                 onerror="this.src='https://placehold.co/600x400/cccccc/ffffff?text=Error+cargando+imagen'">
+                        </div>
+                        <div class="col-md-6">
+                            <p>Nuestra parrillada insignia, diseñada para compartir y disfrutar de una variedad de sabores.</p>
+                            <p><strong>Incluye:</strong></p>
+                            <ul>
+                                <li>Asado de Tira</li>
+                                <li>Pulpón</li>
+                                <li>Chorizo y Morcilla</li>
+                                <li>Chinchulines y Mollejas</li>
+                                <li>Pollo a la parrilla</li>
+                                <li>Papas fritas y ensalada mixta</li>
+                            </ul>
+                            <p class="h4 text-primary">$1,200 MXN (Para 2-3 personas)</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
