--- a/contactus.html
+++ b/contactus.html
@@ -13,122 +13,111 @@
 </head>
 <body>
 
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="resources/img/pu_logo.png" alt="Logo Posta Uruguaya" class="navbar-logo me-2">
+                <img src="resources/logo/pu_logo.png" alt="Logo Posta Uruguaya" class="navbar-logo me-2">
                 <strong>Posta Uruguaya</strong>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">Acerca de</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="menu.html">Menú</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="contactus.html">Contacto</a>
-                    </li>
-                </ul>
-                <a href="#" class="btn btn-primary ms-lg-3" data-bs-toggle="modal" data-bs-target="#reservaModal">Reservar Mesa</a>
+            
+            <div class="offcanvas offcanvas-end bg-dark text-white" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Posta Uruguaya</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav ms-auto text-center text-lg-start">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">Acerca de</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="menu.html">Menú</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="contactus.html">Contacto</a>
+                        </li>
+                    </ul>
+                    <a href="#" class="btn btn-primary ms-lg-3 mt-3 mt-lg-0 w-100 w-lg-auto" data-bs-toggle="modal" data-bs-target="#reservaModal">Reservar Mesa</a>
+                </div>
             </div>
         </div>
     </nav>
 
-    <!-- Page Header -->
     <header class="page-header text-center text-white py-5">
         <div class="container">
-            <h1 class="display-4 fw-bold">Contacto y Reservas</h1>
-            <p class="lead">Estamos listos para recibirte. Haz tu reserva o envíanos tus dudas.</p>
+            <h1 class="display-4 fw-bold">Contacto</h1>
+            <p class="lead">Estamos para servirte. ¡Haz tu reserva o envíanos tus dudas!</p>
         </div>
     </header>
 
-    <!-- Main Content (Grid de Contacto) -->
     <main class="container my-5">
         <div class="row g-5">
-            
-            <!-- Formulario de Contacto -->
             <div class="col-lg-7">
-                <h2 class="mb-4">Envíanos un Mensaje</h2>
+                <h2 class="display-5 mb-3">Envíanos un Mensaje</h2>
+                <p class="lead mb-4">Ideal para reservas de grupos grandes, eventos especiales o cualquier consulta general.</p>
                 <form action="#" method="POST">
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre Completo</label>
-                        <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required>
+                        <input type="text" class="form-control form-control-lg" id="nombre" required>
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Correo Electrónico</label>
-                        <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com" required>
+                        <input type="email" class="form-control form-control-lg" id="email" required>
                     </div>
                     <div class="mb-3">
                         <label for="asunto" class="form-label">Asunto</label>
-                        <input type="text" class="form-control" id="asunto" placeholder="Ej: Reserva para grupo, Evento" required>
+                        <select class="form-select form-select-lg" id="asunto">
+                            <option value="reserva">Reserva (Grupo +10)</option>
+                            <option value="evento">Cotización de Evento</option>
+                            <option value="duda">Duda o Sugerencia</option>
+                            <option value="otro">Otro</option>
+                        </select>
                     </div>
                     <div class="mb-3">
                         <label for="mensaje" class="form-label">Mensaje</label>
-                        <textarea class="form-control" id="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..." required></textarea>
+                        <textarea class="form-control form-control-lg" id="mensaje" rows="5" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-lg">Enviar Mensaje</button>
+                    <button type="submit" class="btn btn-primary btn-lg w-100">Enviar Mensaje</button>
                 </form>
             </div>
 
-            <!-- Información de Contacto (con Íconos) -->
             <div class="col-lg-5">
-                <h2 class="mb-4">Información</h2>
-                <div class="p-4 rounded shadow-sm bg-light">
+                <h2 class="display-5 mb-3">Encuéntranos</h2>
+                <div class="bg-light p-4 rounded shadow-sm">
                     <ul class="list-unstyled fs-5">
-                        <li class="mb-3 d-flex">
-                            <i class="bi bi-geo-alt-fill text-primary fs-3 me-3"></i>
-                            <div>
-                                <strong>Dirección:</strong><br>
-                                Av. Siempre Viva 123, Col. Centro, León, Gto.
-                            </div>
+                        <li class="mb-3">
+                            <i class="bi bi-geo-alt-fill text-primary me-2"></i>
+                            <strong>Dirección:</strong><br>
+                            Av. Siempre Viva 123, Col. Centro, León, Gto.
                         </li>
-                        <li class="mb-3 d-flex">
-                            <i class="bi bi-telephone-fill text-primary fs-3 me-3"></i>
-                            <div>
-                                <strong>Teléfono:</strong><br>
-                                +52 477 123 4567
-                            </div>
+                        <li class="mb-3">
+                            <i class="bi bi-telephone-fill text-primary me-2"></i>
+                            <strong>Teléfono:</strong><br>
+                            <a href="tel:+524771234567" class="text-dark text-decoration-none">+52 477 123 4567</a>
                         </li>
-                        <li class="mb-3 d-flex">
-                            <i class="bi bi-envelope-fill text-primary fs-3 me-3"></i>
-                            <div>
-                                <strong>Email:</strong><br>
-                                reservas@postauruguaya.com
-                            </div>
+                        <li class="mb-3">
+                            <i class="bi bi-envelope-fill text-primary me-2"></i>
+                            <strong>Correo:</strong><br>
+                            <a href="mailto:contacto@postauruguaya.com" class="text-dark text-decoration-none">contacto@postauruguaya.com</a>
                         </li>
-                        <li class="d-flex">
-                            <i class="bi bi-clock-fill text-primary fs-3 me-3"></i>
-                            <div>
-                                <strong>Horarios:</strong><br>
-                                Mar - Dom: 1:00 PM - 11:00 PM<br>
-                                Lunes: Cerrado
-                            </div>
+                        <li class="mb-3">
+                            <i class="bi bi-clock-fill text-primary me-2"></i>
+                            <strong>Horario:</strong><br>
+                            Martes - Domingo <br> 1:00 PM - 11:00 PM
                         </li>
                     </ul>
+                    <img src="resources/img/mapa-ubicacion.jpg" class="img-fluid rounded shadow-sm" alt="Mapa de ubicación" onerror="this.src='resources/img/placeholder-600x400.jpg'">
                 </div>
-
-                <!-- Mapa (Requerimiento) -->
-                <h4 class="mt-4">Ubicación</h4>
-                <!-- Usamos un placeholder estático como se pide. Se puede cambiar por un iframe de Google Maps -->
-                <img src="https://placehold.co/600x300/e9ecef/333333?text=Mapa+de+Ubicaci%C3%B3n" 
-                     class="img-fluid rounded shadow-sm" 
-                     alt="Mapa de ubicación"
-                     onerror="this.src='https://placehold.co/600x300/cccccc/ffffff?text=Error+cargando+mapa'">
             </div>
-
         </div>
     </main>
 
-    <!-- Footer -->
     <footer class="bg-dark text-white py-5">
         <div class="container">
             <div class="row">
@@ -139,10 +128,10 @@
                 <div class="col-md-4 mb-3">
                     <h5>Enlaces Rápidos</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html" class="text-white-50 text-decoration-none">Inicio</a></li>
-                        <li><a href="about.html" class="text-white-50 text-decoration-none">Acerca de</a></li>
-                        <li><a href="menu.html" class="text-white-50 text-decoration-none">Menú</a></li>
-                        <li><a href="contactus.html" class="text-white-50 text-decoration-none">Contacto</a></li>
+                        <li><a href="index.html" class="text-white-50 text-decoration-none footer-link">Inicio</a></li>
+                        <li><a href="about.html" class="text-white-50 text-decoration-none footer-link">Acerca de</a></li>
+                        <li><a href="menu.html" class="text-white-50 text-decoration-none footer-link">Menú</a></li>
+                        <li><a href="contactus.html" class="text-white-50 text-decoration-none footer-link">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 mb-3">
@@ -150,12 +139,12 @@
                     <ul class="list-unstyled text-white-50">
                         <li><i class="bi bi-geo-alt-fill me-2"></i>Av. Siempre Viva 123, León</li>
                         <li><i class="bi bi-telephone-fill me-2"></i>+52 477 123 4567</li>
-                        <li><i class="bi bi-envelope-fill me-2"></i>reservas@postauruguaya.com</li>
+                        <li><i class="bi bi-envelope-fill me-2"></i>contacto@postauruguaya.com</li>
                     </ul>
                     <div class="fs-4">
-                        <a href="#" class="text-white-50 me-3"><i class="bi bi-facebook"></i></a>
-                        <a href="#" class="text-white-50 me-3"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="text-white-50"><i class="bi bi-tripadvisor"></i></a>
+                        <a href="#" class="text-white me-3 social-icon"><i class="bi bi-facebook"></i></a>
+                        <a href="#" class="text-white me-3 social-icon"><i class="bi bi-instagram"></i></a>
+                        <a href="#" class="text-white social-icon"><i class="bi bi-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
@@ -164,19 +153,16 @@
         </div>
     </footer>
 
-    <!-- Botón Flotante de WhatsApp -->
-    <a href="https://wa.me/524772337271?text=Hola%2C+me+gustaria+ordenar%2C+gracias" class="whatsapp-flotante" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/524771234567" class="whatsapp-flotante" target="_blank" rel="noopener noreferrer">
         <i class="bi bi-whatsapp"></i>
     </a>
 
-    <!-- Modal de Reserva (Copiado de index.html para consistencia) -->
     <div class="modal fade" id="reservaModal" tabindex="-1" aria-labelledby="reservaModalLabel" aria-hidden="true">
-        <!-- Contenido del modal de reserva (idéntico al de index.html) -->
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header bg-primary text-white">
                     <h5 class="modal-title" id="reservaModalLabel">Reserva Rápida</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form>
