--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="resources/logo/pu_logo.png" alt="Logo Posta Uruguaya" class="navbar-logo me-2">
+                <img src="resources/logo/logo_pu.png" alt="Logo Posta Uruguaya" class="navbar-logo me-2">
                 <strong>Posta Uruguaya</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -47,13 +47,14 @@
                             <a class="nav-link" href="contactus.html">Contacto</a>
                         </li>
                     </ul>
-                    <a href="#" class="btn btn-primary ms-lg-3 mt-3 mt-lg-0 w-100 w-lg-auto" data-bs-toggle="modal" data-bs-target="#reservaModal">Reservar Mesa</a>
+                    <a href="#" class="btn btn-primary ms-lg-2 mt-2 mt-lg-0 w-30 w-lg-auto" data-bs-toggle="modal" data-bs-target="#reservaModal">Reservar Mesa</a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <header class="hero-section text-white text-center d-flex align-items-center">
+    <header class="hero-section text-white text-center d-flex align-items-center"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('resources/img/HERO_UY.jpg'); background-size: cover; background-position: center;">
         <div class="container">
             <h1 class="display-3 fw-bold">El Sabor Auténtico de Uruguay</h1>
             <p class="lead my-4">Cortes premium, sabor casero y la tradición de la parrilla uruguaya en el corazón de la ciudad.</p>
@@ -123,7 +124,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="resources/img/gallery-1-parrilla.jpg" class="d-block w-100" alt="Corte Premium en la Parrilla" onerror="this.src='resources/img/placeholder-1200x600.jpg'">
+                        <img src="resources/img/gallery-1-parrilla.jpg" class="d-block w-100" alt="Corte Premium en la Parrilla" onerror="this.src='resources/img/parrillada'">
                         <div class="carousel-caption d-none d-md-block bg-dark-overlay">
                             <h5>Parrillada en su Punto</h5>
                             <p>El arte del fuego y la carne.</p>
@@ -191,7 +192,7 @@
         </div>
     </footer>
 
-    <a href="https://wa.me/524771234567" class="whatsapp-flotante" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/524772337271" class="whatsapp-flotante" target="_blank" rel="noopener noreferrer">
         <i class="bi bi-whatsapp"></i>
     </a>
 
