--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="resources/logo/pu_logo.png" alt="Logo Posta Uruguaya" class="navbar-logo me-2">
+                <img src="resources/logo/logo_pu.png" alt="Logo Posta Uruguaya" class="navbar-logo me-2">
                 <strong>Posta Uruguaya</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -43,13 +43,14 @@
                             <a class="nav-link" href="contactus.html">Contacto</a>
                         </li>
                     </ul>
-                    <a href="#" class="btn btn-primary ms-lg-3 mt-3 mt-lg-0 w-100 w-lg-auto" data-bs-toggle="modal" data-bs-target="#reservaModal">Reservar Mesa</a>
+                    <a href="#" class="btn btn-primary ms-lg-2 mt-2 mt-lg-0 w-30 w-lg-auto" data-bs-toggle="modal" data-bs-target="#reservaModal">Reservar Mesa</a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <header class="page-header text-center text-white py-5">
+    <header class="page-header text-center text-white py-5"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('resources/img/HERO_UY.jpg'); background-size: cover; background-position: center;">
         <div class="container">
             <h1 class="display-4 fw-bold">Nuestra Historia</h1>
             <p class="lead">Pasión por el fuego, respeto por la tradición.</p>
@@ -65,7 +66,7 @@
                     <p>"Posta Uruguaya" comenzó como un sueño de traer ese rincón de Montevideo a León, un lugar donde el tiempo pasa más lento y el sabor del asado es el protagonista. Usamos solo leña, paciencia y los mejores cortes de carne, tal como nos enseñaron nuestros abuelos.</p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="resources/img/parrillero-accion.jpg" class="img-fluid rounded shadow-lg" alt="Parrillero trabajando en la parrilla" onerror="this.src='resources/img/placeholder-600x400.jpg'">
+                    <img src="resources/img/fondouy.jpg" class="img-fluid rounded shadow-lg" alt="Parrillero trabajando en la parrilla" onerror="this.src='resources/img/placeholder-600x400.jpg'">
                 </div>
             </div>
         </section>
