--- a/contactus.html
+++ b/contactus.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="resources/logo/pu_logo.png" alt="Logo Posta Uruguaya" class="navbar-logo me-2">
+                <img src="resources/logo/logo_pu.png" alt="Logo Posta Uruguaya" class="navbar-logo me-2">
                 <strong>Posta Uruguaya</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -43,7 +43,7 @@
                             <a class="nav-link active" aria-current="page" href="contactus.html">Contacto</a>
                         </li>
                     </ul>
-                    <a href="#" class="btn btn-primary ms-lg-3 mt-3 mt-lg-0 w-100 w-lg-auto" data-bs-toggle="modal" data-bs-target="#reservaModal">Reservar Mesa</a>
+                    <a href="#" class="btn btn-primary ms-lg-2 mt-2 mt-lg-0 w-30 w-lg-auto" data-bs-toggle="modal" data-bs-target="#reservaModal">Reservar Mesa</a>
                 </div>
             </div>
         </div>
@@ -111,12 +111,34 @@
                             <strong>Horario:</strong><br>
                             Martes - Domingo <br> 1:00 PM - 11:00 PM
                         </li>
-                    </ul>
-                    <img src="resources/img/mapa-ubicacion.jpg" class="img-fluid rounded shadow-sm" alt="Mapa de ubicación" onerror="this.src='resources/img/placeholder-600x400.jpg'">
-                </div>
+                    </ul>                    
             </div>
         </div>
     </main>
+
+    <section class="py-5">
+            <div class="container">
+                <div class="text-center mb-5">
+                    <h2 class="display-5">Encuéntranos</h2>
+                    <p class="lead text-muted">Visítanos y vive la experiencia.</p>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="ratio ratio-16x9 shadow rounded">
+                            <iframe 
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.43265166487!2d-101.63758368555026!3d21.13531188981442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bcbf06b0b6911%3A0x6b1c6e1c26b8b0e7!2sAv%20Pradera%201815%2C%20Valle%20del%20Campestre%2C%2037150%20Le%C3%B3n%2C%20Gto.!5e0!3m2!1ses-419!2smx!4v1678886450123!5m2!1ses-419!2smx" 
+                                width="100%" 
+                                height="450" 
+                                style="border:0;" 
+                                allowfullscreen="" 
+                                loading="lazy" 
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     <footer class="bg-dark text-white py-5">
         <div class="container">
