--- a/menu.html
+++ b/menu.html
@@ -65,7 +65,8 @@
         </div>
     </nav>
 
-    <header class="page-header text-center text-white py-5">
+    <header class="page-header text-center text-white py-5"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('resources/img/menuheader.webp'); background-size: cover; background-position: center;">
         <div class="container">
             <h1 class="display-4 fw-bold">Nuestro Menú</h1>
             <p class="lead">Platos que cuentan historias, sabores que crean recuerdos.</p>
@@ -546,7 +547,7 @@
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <h5>Posta Uruguaya</h5>
-                    <p class="text-white-50">La tradición de la parrilla uruguaya, servida con pasión. Desde 2024.</p>
+                    <p class="text-white-50">La tradición de la parrilla uruguaya, servida con pasión. Desde 2021.</p>
                 </div>
                 <div class="col-md-4 mb-3">
                     <h5>Enlaces Rápidos</h5>
@@ -560,8 +561,8 @@
                 <div class="col-md-4 mb-3">
                     <h5>Contacto</h5>
                     <ul class="list-unstyled text-white-50">
-                        <li><i class="bi bi-geo-alt-fill me-2"></i>Av. Siempre Viva 123, León</li>
-                        <li><i class="bi bi-telephone-fill me-2"></i>+52 477 123 4567</li>
+                        <li><i class="bi bi-geo-alt-fill me-2"></i>Av. Pradera 1815. Rinconada del Sur, 37536 León de los Aldama, Gto.</li>
+                        <li><i class="bi bi-telephone-fill me-2"></i>+52 477 233 7271</li>
                         <li><i class="bi bi-envelope-fill me-2"></i>contacto@postauruguaya.com</li>
                     </ul>
                     <div class="fs-4">
@@ -572,7 +573,7 @@
                 </div>
             </div>
             <hr class="text-white-50">
-            <p class="text-center text-white-50 mb-0">&copy; 2024 Posta Uruguaya. Todos los derechos reservados.</p>
+            <p class="text-center text-white-50 mb-0">&copy; 2025 Posta Uruguaya. Todos los derechos reservados.</p>
         </div>
     </footer>
 
