--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <h5>Posta Uruguaya</h5>
-                    <p class="text-white-50">La tradición de la parrilla uruguaya, servida con pasión. Desde 2024.</p>
+                    <p class="text-white-50">La tradición de la parrilla uruguaya, servida con pasión. Desde 2021.</p>
                 </div>
                 <div class="col-md-4 mb-3">
                     <h5>Enlaces Rápidos</h5>
@@ -124,8 +124,8 @@
                 <div class="col-md-4 mb-3">
                     <h5>Contacto</h5>
                     <ul class="list-unstyled text-white-50">
-                        <li><i class="bi bi-geo-alt-fill me-2"></i>Av. Siempre Viva 123, León</li>
-                        <li><i class="bi bi-telephone-fill me-2"></i>+52 477 123 4567</li>
+                        <li><i class="bi bi-geo-alt-fill me-2"></i>Av. Pradera 1815. Rinconada del Sur, 37536 León de los Aldama, Gto.</li>
+                        <li><i class="bi bi-telephone-fill me-2"></i>+52 477 233 7271</li>
                         <li><i class="bi bi-envelope-fill me-2"></i>contacto@postauruguaya.com</li>
                     </ul>
                     <div class="fs-4">
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <hr class="text-white-50">
-            <p class="text-center text-white-50 mb-0">&copy; 2024 Posta Uruguaya. Todos los derechos reservados.</p>
+            <p class="text-center text-white-50 mb-0">&copy; 2025 Posta Uruguaya. Todos los derechos reservados.</p>
         </div>
     </footer>
 
