--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <a href="about.html" class="btn btn-primary">Nuestra Historia</a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="resources/img/interior-restaurante.jpg" class="img-fluid rounded shadow-lg" alt="Interior rústico del restaurante" onerror="this.src='resources/img/placeholder-600x400.jpg'">
+                    <img src="resources/img/galeria1.png" class="img-fluid rounded shadow-lg" alt="Interior rústico del restaurante" onerror="this.src='resources/img/placeholder-600x400.jpg'">
                 </div>
             </div>
         </section>
@@ -83,30 +83,30 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="card h-100 shadow-sm card-hover">
-                        <img src="resources/img/especialidad-parrillada.jpg" class="card-img-top" alt="Parrillada Uruguaya" onerror="this.src='resources/img/placeholder-600x400.jpg'">
+                        <img src="resources/img/parrillada.webp" class="card-img-top" alt="Parrillada Uruguaya" onerror="this.src='resources/img/placeholder-600x400.jpg'">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Parrillada Completa</h5>
-                            <p class="card-text flex-grow-1">Una selección de nuestros mejores cortes: asado, pulpón, chorizo, morcilla y más. Ideal para compartir.</p>
+                            <p class="card-text flex-grow-1">Una selección de nuestros mejores cortes: asado, arrachera, chorizo, chhistorra y más. Ideal para compartir.</p>
                             <a href="menu.html" class="btn btn-primary mt-auto">Ver en el Menú</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card h-100 shadow-sm card-hover">
-                        <img src="resources/img/especialidad-provoleta.jpg" class="card-img-top" alt="Provoleta" onerror="this.src='resources/img/placeholder-600x400.jpg'">
+                        <img src="resources/img/chivito1.webp" class="card-img-top" alt="Torta Churrasco">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Provoleta al Oregánato</h5>
-                            <p class="card-text flex-grow-1">Queso provolone fundido a la parrilla con un toque de orégano y aceite de oliva. La entrada perfecta.</p>
+                            <h5 class="card-title">Torta Churrasco Clásico</h5>
+                            <p class="card-text flex-grow-1">Platillo emblemático del restaurante uruguayo, elaborado con carne de res a la parrilla servida en pan artesanal, acompañada de lechuga, tomate, jamón, queso, huevo y mayonesa. Representa el sabor tradicional del churrasco uruguayo en una versión práctica y completa.</p>
                             <a href="menu.html" class="btn btn-primary mt-auto">Ver en el Menú</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card h-100 shadow-sm card-hover">
-                        <img src="resources/img/especialidad-chivito.jpg" class="card-img-top" alt="Chivito Canadiense" onerror="this.src='resources/img/placeholder-600x400.jpg'">
+                        <img src="resources/img/arrachera.jpg" class="card-img-top" alt="Chivito Canadiense" onerror="this.src='resources/img/placeholder-600x400.jpg'">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Chivito Canadiense</h5>
-                            <p class="card-text flex-grow-1">El sándwich insignia de Uruguay: lomo, jamón, queso, huevo, lechuga, tomate y papas fritas.</p>
+                            <h5 class="card-title">Arrachera</h5>
+                            <p class="card-text flex-grow-1">Corte de carne de res muy apreciado por su sabor intenso y textura jugosa, proveniente del diafragma del animal. Se marina y se asa a la parrilla, logrando una carne tierna y llena de aroma. Se sirve como platillo principal, acompañada de guarniciones típicas como papas fritas, ensalada o chimichurri.</p>
                             <a href="menu.html" class="btn btn-primary mt-auto">Ver en el Menú</a>
                         </div>
                     </div>
@@ -124,21 +124,21 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="resources/img/gallery-1-parrilla.jpg" class="d-block w-100" alt="Corte Premium en la Parrilla" onerror="this.src='resources/img/parrillada'">
+                        <img src="resources/img/galeria1.png" class="d-block w-100" alt="Corte Premium en la Parrilla" onerror="this.src='resources/img/parrillada'">
                         <div class="carousel-caption d-none d-md-block bg-dark-overlay">
                             <h5>Parrillada en su Punto</h5>
                             <p>El arte del fuego y la carne.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="resources/img/gallery-2-ambiente.jpg" class="d-block w-100" alt="Ambiente del Restaurante" onerror="this.src='resources/img/placeholder-1200x600.jpg'">
+                        <img src="resources/img/galeria3.avif" class="d-block w-100" alt="Ambiente del Restaurante" onerror="this.src='resources/img/placeholder-1200x600.jpg'">
                         <div class="carousel-caption d-none d-md-block bg-dark-overlay">
                             <h5>Ambiente Cálido</h5>
                             <p>Un lugar para disfrutar y compartir.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="resources/img/gallery-3-postre.jpg" class="d-block w-100" alt="Postre Chajá" onerror="this.src='resources/img/placeholder-1200x600.jpg'">
+                        <img src="resources/img/galeria2.png" class="d-block w-100" alt="Postre Chajá" onerror="this.src='resources/img/placeholder-1200x600.jpg'">
                         <div class="carousel-caption d-none d-md-block bg-dark-overlay">
                             <h5>Dulce Tradición</h5>
                             <p>Postres que cierran una comida perfecta.</p>
@@ -156,13 +156,36 @@
             </div>
         </section>
     </main>
+    <section class="py-5">
+            <div class="container">
+                <div class="text-center mb-5">
+                    <h2 class="display-5">Encuéntranos</h2>
+                    <p class="lead text-muted">Visítanos y vive la experiencia.</p>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="ratio ratio-16x9 shadow rounded">
+                            <iframe 
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.43265166487!2d-101.63758368555026!3d21.13531188981442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bcbf06b0b6911%3A0x6b1c6e1c26b8b0e7!2sAv%20Pradera%201815%2C%20Valle%20del%20Campestre%2C%2037150%20Le%C3%B3n%2C%20Gto.!5e0!3m2!1ses-419!2smx!4v1678886450123!5m2!1ses-419!2smx" 
+                                width="100%" 
+                                height="450" 
+                                style="border:0;" 
+                                allowfullscreen="" 
+                                loading="lazy" 
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     <footer class="bg-dark text-white py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <h5>Posta Uruguaya</h5>
-                    <p class="text-white-50">La tradición de la parrilla uruguaya, servida con pasión. Desde 2024.</p>
+                    <p class="text-white-50">La tradición de la parrilla uruguaya, servida con pasión. Desde 2021.</p>
                 </div>
                 <div class="col-md-4 mb-3">
                     <h5>Enlaces Rápidos</h5>
@@ -176,8 +199,8 @@
                 <div class="col-md-4 mb-3">
                     <h5>Contacto</h5>
                     <ul class="list-unstyled text-white-50">
-                        <li><i class="bi bi-geo-alt-fill me-2"></i>Av. Siempre Viva 123, León</li>
-                        <li><i class="bi bi-telephone-fill me-2"></i>+52 477 123 4567</li>
+                        <li><i class="bi bi-geo-alt-fill me-2"></i>Av. Pradera 1815. Rinconada del Sur, 37536 León de los Aldama, Gto.</li>
+                        <li><i class="bi bi-telephone-fill me-2"></i>+52 477 233 7271</li>
                         <li><i class="bi bi-envelope-fill me-2"></i>contacto@postauruguaya.com</li>
                     </ul>
                     <div class="fs-4">
@@ -188,7 +211,7 @@
                 </div>
             </div>
             <hr class="text-white-50">
-            <p class="text-center text-white-50 mb-0">&copy; 2024 Posta Uruguaya. Todos los derechos reservados.</p>
+            <p class="text-center text-white-50 mb-0">&copy; 2025 Posta Uruguaya. Todos los derechos reservados.</p>
         </div>
     </footer>
 
